[package]
name = "tamaraft"
version = "0.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros"] }
